--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,17 @@
   <version>1.0-SNAPSHOT</version>
   <name>Parent</name>
   <description>Just a pom that makes it easy to build both projects at the same time.</description>
+         
+  <profiles>
+    <profile>
+      <id>sonar</id>
+    <properties>  
+      <sonar.host.url>
+        http://localhost:9000
+      </sonar.host.url>
+    </properties>
+    </profile>
+  </profiles>
 
   <modules>
     <module>multi-module</module>
